@@ -205,6 +205,11 @@ public:
     //! Get whether or not to use the anomaly model.
     bool useAnomalyModel() const;
 
+    //! Set whether or not to skip updating the anomaly model.
+    CModelProbabilityParams& skipAnomalyModelUpdate(bool skipAnomalyModelUpdate);
+    //! Get whether or not to skip updating the anomaly model.
+    bool skipAnomalyModelUpdate() const;
+
 private:
     //! The coordinates' probability calculations.
     TProbabilityCalculation2Vec m_Calculations;
@@ -222,6 +227,9 @@ private:
     bool m_UseMultibucketFeatures = true;
     //! Whether or not to use the anomaly model.
     bool m_UseAnomalyModel = true;
+    //! Whether or not to skip updating the anomaly model
+    //! because a rule triggered.
+    bool m_SkipAnomalyModelUpdate = false;
 };
 
 //! \brief Describes the result of the model probability calculation.
